Update teacher list link text for grade 10

--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                 </li>
                 <li class="menu-item">
                     <a href="#" class="menu-link" data-panel="teachers">
-                        <i class="fas fa-chalkboard-teacher"></i> اسامی دبیران و کادر مدرسه
+                        <i class="fas fa-chalkboard-teacher"></i> اسامی دبیران و کادر مدرسه (پایه دهم) 
                     </a>
                     <div class="rgb-border"></div>
                 </li>
