--- a/index.html
+++ b/index.html
@@ -781,6 +781,7 @@
                             <li class="teacher-item">دبیران ادبیات: استاد مرادی و استاد محرابی</li>
                             <li class="teacher-item">دبیران عربی: استاد نگین تاج و استاد موسوی زاده</li>
                             <li class="teacher-item">دبیران دین و زندگی: استاد یزدانی و استاد صالحی</li>
+                            <li class="teacher-item">دبیران زبان: استاد سلکی و استاد احمدی و استاد شجاعی</li>
                             <li class="teacher-item">دبیر جغرافیا: استاد مرادی پور</li>
                         </ul>
                     </div>
@@ -788,10 +789,10 @@
                     <div class="category-card">
                         <h3 class="category-title">سایر دبیران و کادر</h3>
                         <ul class="teacher-list">
-                            <li class="teacher-item">دبیران زبان: استاد سلکی و استاد احمدی و استاد شجاعی</li>
                             <li class="teacher-item">دبیر دفاعی: استاد عزیزی</li>
                             <li class="teacher-item">دبیر رسانه: استاد خالقی</li>
                             <li class="teacher-item">مربی ورزش: استاد حکمت</li>
+                            <li class="teacher-item">جناب احمدی</li>
                         </ul>
                     </div>
                 </div>
